    include the version of the performance model format. The version
    number is also written in the file itself.
    When updating the format, the internal variable
    _STARPU_PERFMODEL_VERSION should be updated. It is then possible
    to switch easily between differents versions of StarPU having
    different performance model formats.

Small features:
  * New function starpu_perfmodel_directory() to print directory
    storing performance models. Available through the new option -d of
    the tool starpu_perfmodel_display
  * New batch files to execute StarPU applications under Microsoft
    Visual Studio (They are installed in path_to_starpu/bin/mvsc)/

Changes:
  * Modification of perfmodels output format for future improvements.
  * Fix for properly dealing with NAN on windows systems

StarPU 1.1.0rc2 (svn revision 10575)
==============================================
The scheduling context release

Changes:
  * StarPU-MPI: Fix potential bug for user-defined datatypes. As MPI
    can reorder messages, we need to make sure the sending of the size
    of the data has been completed.
  * Documentation is now generated through doxygen.

Small Changes:
  * Explicitly name the non-sleeping-non-running time "Overhead", and use
    another color in vite traces.
  * Use C99 variadic macro support, not GNU.
  * Fix performance regression: dmda queues were inadvertently made
    LIFOs in r9611.
  * Invert GPU-GPU direct transfer control environment variable name,
    i.e environment variable STARPU_ENABLE_CUDA_GPU_GPU_DIRECT should
    be used instead of STARPU_DISABLE_CUDA_GPU_GPU_DIRECT.

StarPU 1.1.0rc1 (svn revision 9750)
==============================================

New features:
  * OpenGL interoperability support.
  * Capability to store compiled OpenCL kernels on the file system
  * Capability to load compiled OpenCL kernels
  * Performance models measurements can now be provided explicitly by
    applications.